--- a/templates/unavailable_v3.html
+++ b/templates/unavailable_v3.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html><html lang=en> <head><meta charset=utf-8><meta content="width=device-width, initial-scale=1.0" name=viewport><title>Resource Unavailable</title><style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resource Unavailable</title>
+    <style>
         body {
             background-color: #333;
             color: #fff;
@@ -44,4 +50,11 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-    </style></head> <body> <h1>Resource Unavailable</h1> <p id=message>{{message}}.</p> <button id=logout-button><a href=/logout>Logout</a></button> </body> </html>
+    </style>
+</head>
+<body>
+    <h1>Resource Unavailable</h1>
+    <p id="message">{{message}}.</p>
+    <button id="logout-button"><a href="/logout">Logout</a></button>
+</body>
+</html>
