--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html> <head><title>Messages</title><link href=favicon.ico rel=icon type=image/x-icon></head> <body> <style>
+<!DOCTYPE html><html> <head><title>Messages</title><link href=favicon.ico rel=icon type=image/x-icon></head> <script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script> <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
+gtag('js',new Date());gtag('config','G-99X61WSQE7');</script> <body> <style>
         body {
             display: flex;
             height: 100vh;
@@ -40,6 +41,7 @@
         #profile-badge {
             position: absolute;
             bottom: 0;
+            left: 0;
             width: 100%;
             height: 5vh;
             border-top: 1px solid #000;
