--- a/templates/index_v3.html
+++ b/templates/index_v3.html
@@ -4,6 +4,15 @@
     <title>Messages</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99X61WSQE7');
+</script>
 <body>
     <style>
         body {
@@ -47,6 +56,7 @@
         #profile-badge {
             position: absolute;
             bottom: 0;
+            left: 0;
             width: 100%;
             height: 5vh;
             border-top: 1px solid #000;
