--- a/templates/login_v3.html
+++ b/templates/login_v3.html
@@ -78,8 +78,35 @@
             overflow: hidden;
             transition: opacity 1s, max-height 1s;
         }
+
+        #warningMessage {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: orange;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            opacity: 0;
+            transition: opacity 2s;
+            z-index: 1000;
+        }
+
     </style>
+    <div id="warningMessage">
+        This is a portfolio project for grading. Please don't use real credentials. The site will be inactive post grading.
+    </div>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99X61WSQE7');
+</script>
 <body>
     <img id="logo" src="/logo.png" alt="Logo">
     <form method="post">
@@ -105,6 +132,9 @@
                 p.style.opacity = "0";
                 p.style.maxHeight = "0";
             }, 5000);
+        }
+        window.onload = function() {
+            document.getElementById('warningMessage').style.opacity = "1";
         }
     </script>
 </body>
