--- a/templates/signup.html
+++ b/templates/signup.html
@@ -67,4 +67,20 @@
             overflow: hidden;
             transition: opacity 1s, max-height 1s;
         }
-    </style></head> <body> <img alt=Logo id=logo src=/logo.png> <form method=post> <p><input name=username placeholder=Username type=text></p> <p><input name=password placeholder=Password type=password></p> <p><input type=submit value=Signup></p> <p style="text-align: center;">Already have an account? <a href=/login>Login</a></p> </form> <script>var error="{{ error }}";if(error){var p=document.createElement("p");p.id="errorMessage";p.innerHTML=error;document.querySelector("form").appendChild(p);setTimeout(function(){p.style.opacity="0";p.style.maxHeight="0";},5000);}</script> </body> </html>
+
+        #warningMessage {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: orange;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            opacity: 0;
+            transition: opacity 2s;
+            z-index: 1000;
+        }
+    </style><div id=warningMessage> This is a portfolio project for grading. Please don't use real credentials. The site will be inactive post grading. </div></head> <script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script> <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
+gtag('js',new Date());gtag('config','G-99X61WSQE7');</script> <body> <img alt=Logo id=logo src=/logo.png> <form method=post> <p><input name=username placeholder=Username type=text></p> <p><input name=password placeholder=Password type=password></p> <p><input type=submit value=Signup></p> <p style="text-align: center;">Already have an account? <a href=/login>Login</a></p> </form> <script>var error="{{ error }}";if(error){var p=document.createElement("p");p.id="errorMessage";p.innerHTML=error;document.querySelector("form").appendChild(p);setTimeout(function(){p.style.opacity="0";p.style.maxHeight="0";},5000);}
+window.onload=function(){document.getElementById('warningMessage').style.opacity="1";}</script> </body> </html>
