--- a/templates/unavailable.html
+++ b/templates/unavailable.html
@@ -44,4 +44,5 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-    </style></head> <body> <h1>Resource Unavailable</h1> <p id=message>{{message}}.</p> <button id=logout-button><a href=/logout>Logout</a></button> </body> </html>
+    </style></head> <script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script> <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
+gtag('js',new Date());gtag('config','G-99X61WSQE7');</script> <body> <h1>Resource Unavailable</h1> <p id=message>{{message}}.</p> <button id=logout-button><a href=/logout>Logout</a></button> </body> </html>
