--- a/templates/unavailable_v3.html
+++ b/templates/unavailable_v3.html
@@ -52,6 +52,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99X61WSQE7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99X61WSQE7');
+</script>
 <body>
     <h1>Resource Unavailable</h1>
     <p id="message">{{message}}.</p>
